add signup page

--- a/Trangchu.html
+++ b/Trangchu.html
@@ -18,8 +18,8 @@
             </div>
 
             <div class="user-container">
-                <button class="signUp-btn">Đăng ký</button>
-                <button class="login-btn">Đăng nhập</button>
+                <button class="signUp-btn"><a href="Signup.html" style="text-decoration: none; color: black">Đăng ký</a></button>
+                <button class="login-btn"><a href="Login.html" style="text-decoration: none; color: black">Đăng nhập</a></button>
                 <box-icon name='bell'></box-icon>
             </div>
         </div>
