tach navbar, footer ra file rieng

--- a/Trangchu.html
+++ b/Trangchu.html
@@ -5,30 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/Trangchu.css" />
-    <title>SGTravel</title>
+    <title>SGTravel-Trang chủ</title>
 </head>
 
 <body>
-    <div class="navbar">
-        <div class="nav-container">
-            <h2 class="nav-logo"><b>SGTravel</b></h2>
-            <div class="searchbox-container">
-                <input type="text" id="searchbox" placeholder="Tìm kiếm" />
-                <box-icon name='search-alt-2' class="icon"></box-icon>
-            </div>
+    <!-- Navbar -->
+    <script src="navbar.js"></script>
+    
+    <!-- Body -->
+    <div class="body-content">
+        body
 
-            <div class="user-container">
-                <button class="signUp-btn"><a href="Signup.html" style="text-decoration: none; color: black">Đăng ký</a></button>
-                <button class="login-btn"><a href="Login.html" style="text-decoration: none; color: black">Đăng nhập</a></button>
-                <box-icon name='bell'></box-icon>
-            </div>
-        </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Footer -->
+    <script src="footer.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script
-
-
 </body>
 
 </html>
