Sửa FE+ thêm Database

--- a/Chitietdiadiem.html
+++ b/Chitietdiadiem.html
@@ -7,9 +7,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style/Dangbai.css" />
+    <link rel="stylesheet" href="/style/Chitietdiadiem.css" />
     <link rel="stylesheet" href="/style/sidebardash.css" />
-    <title>Quản Lý Bài Đăng</title>
+    <title>Chi tiết địa điểm</title>
   </head>
   <body>
     <div class="sidebar">
@@ -35,14 +35,6 @@
         </a>
       </div>
       <div class="menu-section">
-        <h3>Bài đăng</h3>
-        <a href="/Dangbai.html">
-          <i class="fas fa-upload"> </i>
-          Bài đăng
-        </a>
-      </div>
-
-      <div class="menu-section">
         <h3>Bình luận</h3>
         <a href="/comment.html">
           <i class="fas fa-comments"> </i>
@@ -66,25 +58,22 @@
       </div>
     </div>
     <div class="container">
-      <h2>Quản Lý Bài Đăng</h2>
+      <h2>Chi tiết địa điểm</h2>
 
       <table>
         <tr>
           <th>ID</th>
-          <th>Tiêu đề</th>
           <th>Nội dung</th>
+          <th>ID người dùng</th>
           <th>Người đăng</th>
-          <th>Trạng thái</th>
           <th>Hình ảnh</th>
           <th>Mô tả</th>
-          <th>Hành động</th>
         </tr>
         <tr>
           <td data-label="ID">1</td>
-          <td data-label="Tiêu đề">Bài đăng 1</td>
-          <td data-label="Nội dung">Quán ăn</td>
+          <td data-label="Nội dung">Quán karaoke</td>
+          <td>ND01</td>
           <td data-label="Tác giả">Nguyễn Văn A</td>
-          <td data-label="Trạng thái">Đã duyệt</td>
           <td data-label="Hình ảnh">
             <img src="/images1.jpg" alt="Hình ảnh 1" />
             <img src="image2.jpg" alt="Hình ảnh 2" />
@@ -92,48 +81,30 @@
             <img src="image4.jpg" alt="Hình ảnh 4" />
           </td>
           <td data-label="Mô tả" class="description">
-            Mô tả bài đăng 1. Đây là một mô tả dài hơn về bài đăng.
-          </td>
-          <td data-label="Hành động" class="action-buttons">
-            <button>Duyệt</button>
-            <button>Không duyệt</button>
+            Nơi giải trí, quán karaoke
           </td>
         </tr>
         <tr>
           <td data-label="ID">2</td>
-          <td data-label="Tiêu đề">Bài đăng 2</td>
-          <td data-label="Nội dung">Nội dung bài đăng 2</td>
+          <td data-label="Nội dung">Quán cơm gà</td>
+          <td>ND03</td>
           <td data-label="Tác giả">Trần Thị B</td>
-          <td data-label="Trạng thái">Chờ duyệt</td>
           <td data-label="Hình ảnh">
             <img src="image3.jpg" alt="Hình ảnh 3" />
             <img src="image4.jpg" alt="Hình ảnh 4" />
           </td>
-          <td data-label="Mô tả" class="description">
-            Mô tả bài đăng 2. Đây là một mô tả dài hơn về bài đăng.
-          </td>
-          <td data-label="Hành động" class="action-buttons">
-            <button>Duyệt</button>
-            <button>Không duyệt</button>
-          </td>
+          <td data-label="Mô tả" class="description">Cơm bình dân</td>
         </tr>
         <tr>
           <td data-label="ID">3</td>
-          <td data-label="Tiêu đề">Bài đăng 3</td>
-          <td data-label="Nội dung">Nội dung bài đăng 3</td>
+          <td data-label="Nội dung">Chùa A</td>
+          <td>ND02</td>
           <td data-label="Tác giả">Lê Văn C</td>
-          <td data-label="Trạng thái">Từ chối</td>
           <td data-label="Hình ảnh">
             <img src="image5.jpg" alt="Hình ảnh 5" />
             <img src="image6.jpg" alt="Hình ảnh 6" />
           </td>
-          <td data-label="Mô tả" class="description">
-            Mô tả bài đăng 3. Đây là một mô tả dài hơn về bài đăng.
-          </td>
-          <td data-label="Hành động" class="action-buttons">
-            <button>Duyệt</button>
-            <button>Không duyệt</button>
-          </td>
+          <td data-label="Mô tả" class="description">Nơi thờ cúng</td>
         </tr>
       </table>
     </div>
