--- a/Diadiem.html
+++ b/Diadiem.html
@@ -35,14 +35,6 @@
         </a>
       </div>
       <div class="menu-section">
-        <h3>Bài đăng</h3>
-        <a href="/Dangbai.html">
-          <i class="fas fa-upload"> </i>
-          Bài đăng
-        </a>
-      </div>
-
-      <div class="menu-section">
         <h3>Bình luận</h3>
         <a href="/comment.html">
           <i class="fas fa-comments"> </i>
@@ -70,7 +62,7 @@
       <table>
         <thead>
           <tr>
-            <th>ID Địa Điểm</th>
+            <th>ID</th>
             <th>Tên Địa Điểm</th>
             <th>Địa Chỉ</th>
             <th>Số Điện Thoại</th>
@@ -80,9 +72,6 @@
             <th>Điểm Trung Bình</th>
             <th>Giá Cả Giao Động</th>
             <th>Số Lượt Đánh Giá</th>
-            <th>Người Bình Luận</th>
-            <th>Nội dung bình luận</th>
-            <th>Ngày Bình Luận</th>
             <th>Link địa điểm</th>
             <th>Hành Động</th>
           </tr>
@@ -99,9 +88,6 @@
             <td>4.5</td>
             <td>100,000 - 500,000 VND</td>
             <td>120</td>
-            <td>Nguyễn Văn A</td>
-            <td>Rất ok</td>
-            <td>2024-01-02</td>
             <td>
               <a href="https://maps.app.goo.gl/zM9VatDXS7k8LD5t6"></a>link
             </td>
@@ -122,9 +108,6 @@
             <td>4.0</td>
             <td>200,000 - 1,000,000 VND</td>
             <td>80</td>
-            <td>Trần Thị B</td>
-            <td>Hài lòng</td>
-            <td>2024-02-15</td>
             <td>
               <a href="https://maps.app.goo.gl/h4QyRJTzi8QKrWVP9"></a>link
             </td>
@@ -136,6 +119,9 @@
           </tr>
         </tbody>
       </table>
+      <div class="xem_them">
+        <a href="/Chitietdiadiem.html" class="xem_them1">Xem chi tiết</a>
+      </div>
     </div>
   </body>
 </html>
