--- a/Report.html
+++ b/Report.html
@@ -34,13 +34,6 @@
           Địa điểm
         </a>
       </div>
-      <div class="menu-section">
-        <h3>Bài đăng</h3>
-        <a href="/Dangbai.html">
-          <i class="fas fa-upload"> </i>
-          Bài đăng
-        </a>
-      </div>
 
       <div class="menu-section">
         <h3>Bình luận</h3>
@@ -70,9 +63,10 @@
       <table>
         <thead>
           <tr>
-            <th>STT</th>
-            <th>ID Bài viết</th>
+            <th>ID</th>
+            <th>ID địa điểm</th>
             <th>Nội dung báo cáo</th>
+            <th>ID người dùng</th>
             <th>Người báo cáo</th>
             <th>Ngày báo cáo</th>
             <th>Trạng thái</th>
@@ -82,8 +76,9 @@
         <tbody>
           <tr>
             <td>1</td>
-            <td>BV001</td>
+            <td>1</td>
             <td>Bài viết chứa nội dung không phù hợp</td>
+            <td>2</td>
             <td>user123</td>
             <td>2023-10-26</td>
             <td>Đang xử lý</td>
@@ -94,8 +89,9 @@
           </tr>
           <tr>
             <td>2</td>
-            <td>BV003</td>
+            <td>3</td>
             <td>Bài viết spam</td>
+            <td>1</td>
             <td>nguyenvanA</td>
             <td>2023-10-25</td>
             <td>Đã xử lý</td>
