--- a/comment.html
+++ b/comment.html
@@ -33,14 +33,6 @@
         </a>
       </div>
       <div class="menu-section">
-        <h3>Bài đăng</h3>
-        <a href="/Dangbai.html">
-          <i class="fas fa-upload"> </i>
-          Bài đăng
-        </a>
-      </div>
-
-      <div class="menu-section">
         <h3>Bình luận</h3>
         <a href="/comment.html">
           <i class="fas fa-comments"> </i>
@@ -70,6 +62,7 @@
         <tr>
           <th>ID</th>
           <th>Nội dung bình luận</th>
+          <th>ID địa điểm</th>
           <th>Địa điểm</th>
           <th>Người dùng</th>
           <th>Ngày bình luận</th>
@@ -78,6 +71,7 @@
         <tr>
           <td>1</td>
           <td class="comment-content">tôi rất thích</td>
+          <td>3</td>
           <td>Quán ăn</td>
           <td class="user-info">Nguyễn Văn A</td>
           <td>2024-01-01</td>
@@ -89,6 +83,7 @@
         <tr>
           <td>2</td>
           <td class="comment-content">Hài lòng</td>
+          <td>5</td>
           <td>Quán nước</td>
           <td class="user-info">Trần Thị B</td>
           <td>2024-01-02</td>
@@ -100,6 +95,7 @@
         <tr>
           <td>3</td>
           <td class="comment-content">ok</td>
+          <td>8</td>
           <td>Karaoke A</td>
           <td class="user-info">Lê Văn C</td>
           <td>2024-01-03</td>
