--- a/Dashboard.html
+++ b/Dashboard.html
@@ -31,13 +31,6 @@
           Địa điểm
         </a>
       </div>
-      <div class="menu-section">
-        <h3>Bài đăng</h3>
-        <a href="/Dangbai.html">
-          <i class="fas fa-upload"> </i>
-          Bài đăng
-        </a>
-      </div>
 
       <div class="menu-section">
         <h3>Bình luận</h3>
@@ -64,11 +57,7 @@
     </div>
     <div class="main-content">
       <div class="header">
-        <div class="search-container">
-          <input placeholder="Tìm Kiếm" type="text" />
-        </div>
         <div class="icons">
-          <i class="fas fa-search"> </i>
           <i class="fas fa-bell"> </i>
           <i class="fas fa-user"> </i>
           <span> admin </span>
@@ -106,6 +95,10 @@
               <i class="fas fa-arrow-right"> </i>
             </p>
           </div>
+        </div>
+      
+        <!-- Hàng ô "Tháng này" -->
+        <div class="cards">
           <div class="card">
             <i class="fas fa-arrow-up"> </i>
             <p>Bài đăng</p>
@@ -134,6 +127,26 @@
             </p>
           </div>
         </div>
+      
+        <div class="charts">
+          <h2>Tháng trước</h2>
+          <div class="chart">
+            <h3>Bài đăng</h3>
+            <!-- <img
+            /> -->
+          </div>
+          <div class="chart">
+            <h3>Bình luận</h3>
+            <!-- <img
+            /> -->
+          </div>
+          <div class="chart">
+            <h3>Report</h3>
+            <!-- <img
+            /> -->
+          </div>
+        </div>
+      </div>
         <div class="charts">
           <h2>Tháng trước</h2>
           <div class="chart">
