update trang chu and test background color

--- a/Signup.html
+++ b/Signup.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <box-icon name='left-arrow-alt' class="BackIcon" onclick="window.location.href='Trangchu.html'"></box-icon>
+        <box-icon name='left-arrow-alt' class="BackIcon" onclick="window.location.href='Trangchu.php'"></box-icon>
         <h2 class="logo">SGTravel</h2>
     </div>
     <div class="Register-container">
